# Designing-an-Autonomous-Learning-Agent-with-Checkpoint-Verification-and-Feynman-Pedagogy---Group-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirments.txt
Autonomous_Learning_Agent/: __init__.py  research_agent_scope.py
notebooks/: 1_scoping.ipynb  2_research_agent.ipynb  3_research_agent_mcp.ipynb  4_research_supervisor.ipynb  5_full_agent.ipynb  6_checkpoint_agent.ipynb  chiron_learning_agent_langgraph.ipynb  utils.py
notebooks/.ipynb_checkpoints/: chiron_learning_agent_langgraph-checkpoint.ipynb
src/: learning_graph.py
src/Autonomous_Learning_Agent/: __init__.py  multi_agent_supervisor.py  prompts.py  research_agent.py  research_agent_full.py  research_agent_scope.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  utils.py
src/autonomous_learning_agent.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
src/deep_research_from_scratch/: autonomous_learning_agent.py  deep_research_agent.py  learning_agent.py  multi_agent_supervisor.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  utils.py
