[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-learning-agent"
version = "0.1.0"
description = "Learning Agent project"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["Autonomous_Learning_Agent"]

[tool.setuptools.package-dir]
"Autonomous_Learning_Agent" = "src/Autonomous_Learning_Agent"
